2017-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* targets/ri5cy/Ri5cyImpl.cpp (Ri5cyImpl::runToBreak): Tried a
	different sequence.

2017-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	This implementation provides a way to resume continuously, but
	does not yet work with the RI5CY implementation. It seems the
	pipeline does not get fully flushed.

	* server/GdbServer.cpp (GdbServer::rspRemoveMatchpoint)
	(GdbServer::rspInsertMatchpoint): Just return empty packets, so
	GDB does breakpoints by steam.
	* targets/ri5cy/Ri5cyImpl.cpp (Ri5cyImpl::readRegister)
	(Ri5cyImpl::writeRegister): Warn rather than abort if asked for
	unkown registers, this is a GDB problem.
	(Ri5cyImpl::stepInstr): Write NPC first to flush pipeline.
	(Ri5cyImpl::runToBreak): Implementation provided, but does not yet
	work.

2017-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* targets/picorv32/Picorv32Impl.cpp: Unify header inclusion.
	* targets/ri5cy/Ri5cyImpl.cpp: Remove std::chrono:: namespace
	qualifiers throughout, covered by using declarations.
	(Ri5cyImpl::resetModel): Set the DBG_IE reg to trap on breakpoint
	and illegal instruction.
	(Ri5cyImpl::haltModel): Rewrite using waitForHalt.
	(Ri5cyImpl::waitForHalt): Created.
	(Ri5cyImpl::stepInstr): Rewritten to write the NPC to flush the
	pipeline.
	* targets/ri5cy/Ri5cyImpl.h (class Ri5cyImple): Add constants for
	DBG_IE fields and waitForHalt method.

2017-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* targets/ri5cy/Ri5cyImpl.cpp (Ri5cyImpl::stepInstr): clear
	fetch_enable_i.

2017-06-30  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* targets/ri5cy/Ri5cyImpl.cpp (Ri5cyImpl::resume): Deal with all
	types of step.
	(Ri5cyImpl::readRegister, Ri5cyImpl::writeRegister): Rewrite to
	use debug register access methods.
	(Ri5cyImpl::read, Ri5cyImpl::write): Access dp_ram, not sp_ram.
	(Ri5cyImpl::clockModel): Created.
	(Ri5cyImpl::resetModel, Ri5cyImpl::haltModel): Rewritten to use